--- a/Frontend/src/app/layouts/home/home.component.css
+++ b/Frontend/src/app/layouts/home/home.component.css
@@ -2,15 +2,6 @@
   padding: 0px 12px;
 }
 
-nz-breadcrumb {
-  margin: 16px 0;
-}
-
-nz-content {
-  background: #fff;
-  padding: 24px;
-  min-height: 280px;
-}
 nz-header {
   background: white;
   border-bottom: 1px solid gainsboro;
@@ -23,9 +14,9 @@ nz-header {
   height: 60px;
   background: rgb(255, 255, 255);
   position: sticky;
-    top: 0;
-    z-index: 3;
-    text-align: center;
+  top: 0;
+  z-index: 3;
+  text-align: center;
 }
 .image {
   height: 60px;
@@ -33,11 +24,6 @@ nz-header {
   padding-top: 10px;
 }
 
-.para {
-  color: black;
-  font-family: "Fantasy";
-  font-size: 20px;
-}
 .layout {
   min-height: auto;
 }
@@ -53,31 +39,15 @@ nz-sider::-webkit-scrollbar {
   display: none;
 }
 nz-sider {
--ms-overflow-style: none;  /* IE and Edge */
-scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
-.b1 {
-  font-size: 25px;
-  padding: 10px;
-  border-radius: 5px;
-}
-.b1:hover {
-  background-color: pink;
-}
 .list {
-  width: 200px;
+  width: 250px;
   border-radius: 10px;
 }
-.item {
-  height: 50px;
-}
-/* .inner-header{
-  background: none;
-  font-size: large;
-  font-weight: 500;
-  border: none;
-} */
+
 .trigger {
   font-size: 18px;
   line-height: 64px;
@@ -98,19 +68,10 @@ scrollbar-width: none;  /* Firefox */
   display: flex;
   flex-direction: row;
 }
-.stat {
-  background-color: lightgreen;
-  color: black;
-  padding: 3px;
-  border-radius: 10px;
-}
 
 .av1 {
   display: flex;
   flex-direction: column;
-}
-.mr-5 {
-  font-weight: 500;
 }
 
 [nz-icon] {
@@ -122,12 +83,12 @@ nz-avatar {
   margin-right: 0px !important;
 }
 
-.text-center{
+.text-center {
   padding-top: 10px;
   font-weight: 500 !important;
 }
 
-.text-danger{
+.text-danger {
   font-weight: 500 !important;
   padding-bottom: 10px;
   text-align: center !important;
@@ -135,6 +96,10 @@ nz-avatar {
 }
 
 hr {
-    margin-top: 5px !important;
-    margin-bottom: 5px !important;
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+}
+.fa-sort-down {
+  font-size: 20px;
+  color: #1890ff;
 }
