--- a/Frontend/src/app/layouts/home/home.component.html
+++ b/Frontend/src/app/layouts/home/home.component.html
@@ -50,10 +50,9 @@
             nz-dropdown
             nzPlacement="bottomRight"
             [nzDropdownMenu]="menu"
-            class="mr-5"
           >
-            {{ full_name }}
-            <span nz-icon nzType="down" nzTheme="outline"></span>
+            {{ full_name }} &nbsp;
+            <i class="fa-solid fa-sort-down"></i>
           </button>
 
           <nz-dropdown-menu #menu="nzDropdownMenu">
@@ -65,9 +64,24 @@
                   <div style="font-size: 14px">
                     {{ user_data?.first_name }} {{ user_data?.last_name }}
                   </div>
-                  <div>Department: <span style="font-weight: 600;">{{deptData?.department_name}}</span></div>
-                  <div>Rank: <span style="font-weight: 600;">{{deptData?.ranking}}</span></div>
-                  <div>Staus: <span style="color: green; font-weight: 600;">{{ user_data?.status }}</span></div>
+                  <div>
+                    Department:
+                    <span style="font-weight: 600">{{
+                      deptData?.department_name
+                    }}</span>
+                  </div>
+                  <div>
+                    Rank:
+                    <span style="font-weight: 600">{{
+                      deptData?.ranking
+                    }}</span>
+                  </div>
+                  <div>
+                    Staus:
+                    <span style="color: green; font-weight: 600">{{
+                      user_data?.status
+                    }}</span>
+                  </div>
                 </div>
                 <hr />
                 <div class="av1 pl-2">
@@ -77,8 +91,8 @@
                   >
                 </div>
                 <hr />
-                <div class="text-danger">                  
-                  <a (click)="logout()" >Logout</a>
+                <div class="text-danger">
+                  <a (click)="logout()">Logout</a>
                 </div>
               </div>
             </ul>
@@ -87,7 +101,6 @@
       </div>
     </nz-header>
     <nz-layout class="inner-layout">
-      <!-- <nz-header class="inner-header"> Approvals</nz-header> -->
       <router-outlet></router-outlet>
       <!-- <nz-footer class="text-center"> sunshine @ 2022 </nz-footer> -->
     </nz-layout>
