--- a/Frontend/src/app/modules/funds/components/funds/funds.component.html
+++ b/Frontend/src/app/modules/funds/components/funds/funds.component.html
@@ -87,7 +87,7 @@
         <nz-form-control nz-col nzSpan="10">
           <input
             nz-input
-            formControlName="fund_id"
+            formControlName="ranking"
             placeholder="please enter Fund Id"
           />
         </nz-form-control>
@@ -99,7 +99,7 @@
         <nz-form-control nz-col nzSpan="10">
           <input
             nz-input
-            formControlName="proposed_amount"
+            formControlName="ranking"
             type="text"
             nz-input
             placeholder="please enter Proposed Amount"
@@ -113,7 +113,7 @@
         <nz-form-control nz-col nzSpan="10">
           <input
             nz-input
-            formControlName="proposed_amount"
+            formControlName="ranking"
             type="text"
             nz-input
             placeholder="Funded By"
@@ -127,7 +127,7 @@
         <nz-form-control nz-col nzSpan="10">
           <input
             nz-input
-            formControlName="proposed_amount"
+            formControlName="ranking"
             type="text"
             nz-input
             placeholder="Status"
@@ -141,7 +141,7 @@
         <nz-form-control nz-col nzSpan="10">
           <input
             nz-input
-            formControlName="proposed_amount"
+            formControlName="ranking"
             type="text"
             nz-input
             placeholder="Proposed Date"
@@ -155,7 +155,7 @@
         <nz-form-control nz-col nzSpan="10">
           <input
             nz-input
-            formControlName="proposed_amount"
+            formControlName="ranking"
             type="text"
             nz-input
             placeholder="Department"
